--- a/portfolio/Individual/app/scss/start.scss
+++ b/portfolio/Individual/app/scss/start.scss
@@ -122,7 +122,11 @@
 		padding-left: 20px;
 	}
 }
-
+@media screen and (min-width: 1800px) {
+   .start-page .container {
+   	max-width: 1800px;
+   }
+}
 @media screen and (max-width: 1200px) {
 	.main_slogan {
 	  	font-size: 3rem;
@@ -145,6 +149,9 @@
 }
 
 @media screen and (max-width: 576px) {
+	.start-page_content {
+		min-height: 450px;
+	}
 	.start_bg::before {
 		content: '';
 		position: absolute;
