--- a/portfolio/Crystal/app/css/main.css
+++ b/portfolio/Crystal/app/css/main.css
@@ -42,113 +42,6 @@
       -ms-transform: rotate(180deg);
           transform: rotate(180deg); }
 
-.title_section {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-  z-index: 3;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-  .title_section .title {
-    font: 4.5em "SupermolotThin";
-    text-transform: uppercase;
-    letter-spacing: 0.6em;
-    padding-left: 0.6em;
-    position: relative;
-    color: #e60075;
-    margin-bottom: 0.65em; }
-    .title_section .title span {
-      color: #949494;
-      position: relative; }
-      .title_section .title span:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 20px;
-        height: 20px;
-        background: url(../img/icons/title_copy.png) no-repeat;
-        -webkit-background-size: contain;
-                background-size: contain; }
-    .title_section .title:before, .title_section .title:after {
-      content: '';
-      display: block;
-      height: 3px;
-      width: 110px;
-      position: absolute;
-      top: 50%;
-      margin-top: -1px; }
-    .title_section .title:before {
-      background-color: #a2a2a2;
-      left: 0;
-      -webkit-transform: translateX(-100%);
-          -ms-transform: translateX(-100%);
-              transform: translateX(-100%); }
-    .title_section .title:after {
-      background-color: #e60075;
-      right: 0;
-      -webkit-transform: translateX(100%);
-          -ms-transform: translateX(100%);
-              transform: translateX(100%); }
-
-.title_desription {
-  position: relative;
-  z-index: 3; }
-  .title_desription p {
-    text-align: center;
-    color: #939598;
-    font: 1.5em "SupermolotLight";
-    line-height: 130%;
-    margin-bottom: 0.15em; }
-    .title_desription p span {
-      position: relative;
-      font-family: "SupermolotRegular";
-      padding-right: 1em; }
-      .title_desription p span:after {
-        content: '';
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 11px;
-        height: 11px;
-        background: url(../img/icons/title_copy.png) no-repeat;
-        -webkit-background-size: contain;
-                background-size: contain; }
-  .title_desription .post_txt {
-    color: #f11f83;
-    display: block;
-    font-size: 1.5em;
-    text-align: center;
-    letter-spacing: 0.05em;
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center; }
-    .title_desription .post_txt:after {
-      content: '';
-      height: 25px;
-      width: 25px;
-      display: block;
-      background: url(../img/icons/map_item.png) no-repeat;
-      -webkit-background-size: contain;
-              background-size: contain;
-      margin-top: 6px; }
-
 .slick-dots {
   bottom: 33px;
   z-index: 10;
@@ -291,225 +184,6 @@
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%); }
-
-.links_block {
-  padding-top: 60px;
-  padding-bottom: 50px; }
-  .links_block ul {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-  .links_block li {
-    width: 100px;
-    margin: 0 10px; }
-  .links_block a {
-    font: 2em "CranberryCyr";
-    text-transform: uppercase;
-    color: #000;
-    white-space: nowrap;
-    display: block;
-    text-align: center;
-    text-decoration: none;
-    opacity: 0.9; }
-    .links_block a:before {
-      content: '';
-      display: block;
-      margin: 0 auto;
-      width: 40px;
-      height: 40px;
-      margin-bottom: 4px;
-      display: block; }
-  .links_block .link1:before {
-    background: url(../img/icons/link1.png);
-    -webkit-background-size: contain;
-            background-size: contain; }
-  .links_block .link2:before {
-    background: url(../img/icons/link2.png);
-    -webkit-background-size: contain;
-            background-size: contain; }
-  .links_block .link3:before {
-    background: url(../img/icons/link3.png);
-    -webkit-background-size: contain;
-            background-size: contain; }
-  .links_block .link4:before {
-    background: url(../img/icons/link4.png);
-    -webkit-background-size: contain;
-            background-size: contain; }
-  .links_block .link5:before {
-    background: url(../img/icons/link5.png);
-    -webkit-background-size: contain;
-            background-size: contain; }
-
-.letter_item {
-  margin: 35px 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-  .letter_item:before {
-    content: '';
-    background: url(../img/bg_item1.png) no-repeat;
-    -webkit-background-size: contain;
-            background-size: contain;
-    height: 70px;
-    width: 50px; }
-
-.crystal_labs {
-  position: relative;
-  padding-bottom: 25px; }
-  .crystal_labs .decoration_item {
-    display: block;
-    position: absolute;
-    z-index: 1;
-    top: 270px;
-    width: 100%;
-    height: 2px;
-    background-color: #e5e5e5; }
-    .crystal_labs .decoration_item:before {
-      content: '';
-      display: block;
-      height: 700px;
-      width: 377px;
-      position: absolute;
-      left: 0;
-      bottom: -165px;
-      background: url(../img/lab_decoration.png) no-repeat;
-      -webkit-background-size: contain;
-              background-size: contain; }
-  .crystal_labs .container {
-    position: relative;
-    z-index: 2; }
-  .crystal_labs .labs_container {
-    margin-top: 20px;
-    position: relative;
-    padding: 0 37px; }
-  .crystal_labs .slide {
-    width: 33%;
-    padding: 0 10px;
-    outline: none; }
-  .crystal_labs .img_block {
-    position: relative;
-    width: 100%; }
-    .crystal_labs .img_block:before {
-      content: "";
-      display: block;
-      padding-top: 100%; }
-  .crystal_labs .img_container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0; }
-    .crystal_labs .img_container img {
-      width: 100%;
-      height: 100%; }
-  .crystal_labs .bottom_section {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    position: relative; }
-  .crystal_labs .slide_link {
-    text-transform: uppercase;
-    font: 1.6em "SupermolotLight";
-    border-bottom: 1px solid #ff028a;
-    color: #ff028a;
-    text-decoration: none;
-    position: relative;
-    margin-bottom: 5px;
-    opacity: 1; }
-    .crystal_labs .slide_link:after {
-      content: '';
-      height: 24px;
-      position: absolute;
-      right: -6px;
-      top: 0;
-      -webkit-transform: translateX(100%);
-      -ms-transform: translateX(100%);
-      transform: translateX(100%);
-      width: 24px;
-      display: block;
-      background: url(../img/icons/link_icon_lab.png) no-repeat;
-      -webkit-background-size: contain;
-      background-size: contain; }
-  .crystal_labs .rating {
-    position: absolute;
-    top: -53px;
-    right: 0;
-    background: rgba(255, 255, 255, 0.8);
-    padding: 5px; }
-    .crystal_labs .rating .stars {
-      display: block;
-      width: 120px;
-      height: 14px;
-      background: url(../img/labs/rating.png) no-repeat;
-      -webkit-background-size: contain;
-              background-size: contain;
-      margin-bottom: 4px; }
-    .crystal_labs .rating .city {
-      text-transform: uppercase;
-      font: 1.2em "SupermolotRegular";
-      text-align: center;
-      display: block;
-      letter-spacing: 0.4em; }
-  .crystal_labs .title_block {
-    display: inline-block;
-    position: relative;
-    margin-bottom: 30px; }
-    .crystal_labs .title_block:before, .crystal_labs .title_block:after {
-      content: '';
-      display: block;
-      position: absolute;
-      height: 30px;
-      width: 20px; }
-    .crystal_labs .title_block:before {
-      left: -27px;
-      bottom: -15px;
-      border-bottom: 2px solid #afafaf;
-      border-left: 2px solid #afafaf; }
-    .crystal_labs .title_block:after {
-      top: -15px;
-      right: -17px;
-      border-top: 2px solid #afafaf;
-      border-right: 2px solid #afafaf; }
-    .crystal_labs .title_block .title_block_top {
-      position: relative;
-      z-index: 2;
-      color: #949494;
-      display: block;
-      text-transform: uppercase;
-      letter-spacing: 0.6em;
-      margin-right: -0.6em;
-      font: 1.6em "SupermolotLight";
-      text-align: center; }
-    .crystal_labs .title_block .title_block_bottom {
-      position: relative;
-      z-index: 2;
-      color: #949494;
-      display: block;
-      text-transform: uppercase;
-      letter-spacing: 0.8em;
-      margin-right: -0.8em;
-      font: 1.8em "SupermolotRegular";
-      text-align: center; }
 
 .brands {
   padding-bottom: 80px;
@@ -801,46 +475,6 @@ a.btn {
     -webkit-background-size: contain;
     background-size: contain; }
 
-.competition_crystal {
-  margin-top: 80px; }
-  .competition_crystal p {
-    font: 2.6em "SupermolotThin";
-    text-transform: uppercase;
-    text-align: center;
-    letter-spacing: 0.8em;
-    margin-right: -0.8em; }
-  .competition_crystal .content {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-  .competition_crystal .img_block {
-    width: 60%;
-    position: relative; }
-    .competition_crystal .img_block:after {
-      content: '';
-      position: absolute;
-      display: block;
-      top: 0;
-      width: 1440px;
-      height: 486px;
-      background: url(../img/competition_bg.png) no-repeat;
-      -webkit-background-size: contain;
-              background-size: contain;
-      left: 50%;
-      -webkit-transform: translateX(-46%);
-          -ms-transform: translateX(-46%);
-              transform: translateX(-46%); }
-  .competition_crystal img {
-    width: 100%;
-    height: auto;
-    position: relative;
-    z-index: 2; }
-
 .crystal_life {
   margin-top: 100px; }
   .crystal_life .sub_title:after {
@@ -883,17 +517,6 @@ a.btn {
     color: #ff0089;
     padding-bottom: 0.9em; }
 
-@media screen and (min-width: 1025px) {
-  .links_block a:hover,
-  .crystal_labs .arrow_right:hover,
-  .crystal_labs .arrow_left:hover,
-  .arrow_right_brands:hover,
-  .arrow_left_brands:hover {
-    opacity: 1; }
-  .more_crystal a:hover,
-  .btn:hover {
-    color: #000 !important; } }
-
 @media screen and (max-width: 1230px) {
   .top_banner .txt {
     font-size: 4em;
@@ -909,11 +532,6 @@ a.btn {
     height: 80%;
     left: 8%;
     top: 0; }
-  .crystal_labs .decoration_item:before,
-  .crystal_labs .decoration_item {
-    display: none; }
-  .crystal_labs .title_block .title_block_bottom {
-    font-size: 1.6em; }
   .arrow_right, .arrow_left {
     top: 21%; } }
 
@@ -933,33 +551,20 @@ a.btn {
     margin-left: 70px; }
   .top_banner .logo_banner {
     margin-left: 18px; }
-  .links_block {
-    padding-top: 50px; }
-    .links_block a {
-      font-size: 1.6em; }
-  .title_section .title {
-    font-size: 3.5em; }
-  .title_desription p {
-    font-size: 1.4em; }
   .more_crystal a {
     font-size: 1.8em; }
-  .competition_crystal .img_block {
-    width: 100%; }
-  .competition_crystal p {
-    font-size: 2em; } }
+  .map-section .map_container {
+    padding: 0; } }
 
 @media screen and (max-width: 768px) {
-  .crystal_life,
-  .competition_crystal {
+  .map-section .map_container .decoration {
+    display: none; }
+  .crystal_life {
     margin-top: 60px; }
   .job_container {
     margin-bottom: 20px; }
   .job_container .role {
     font-size: 1.6em; }
-  .competition_crystal p {
-    font-size: 1.5em; }
-  .competition_crystal .img_block:after {
-    width: 180%; }
   .price .price_container:after {
     display: none; }
   .sub_title {
@@ -983,17 +588,6 @@ a.btn {
     font-size: 2em; }
   .sub_title {
     margin-left: 37px; }
-  .crystal_labs .title_block .title_block_bottom {
-    font-size: 1.2em; }
-  .crystal_labs .title_block:before {
-    left: -12px; }
-  .crystal_labs .title_block .title_block_top {
-    font-size: 1.2em; }
-  .crystal_labs .slide_link {
-    font-size: 1.2em; }
-  .crystal_labs .slide_link:after {
-    height: 20px;
-    width: 20px; }
   .arrow_right, .arrow_left {
     top: 18%; }
   .more_crystal a {
@@ -1005,20 +599,6 @@ a.btn {
     font-size: 2.2em; }
   .top_banner .logo_banner {
     margin-left: 15px; }
-  .links_block a:before {
-    width: 25px;
-    height: 25px; }
-  .links_block li {
-    width: 70px; }
-  .links_block a {
-    font-size: 1.4em; }
-  .title_section .title {
-    font-size: 2.5em; }
-  .title_desription p, .title_desription .post_txt {
-    font-size: 1.2em; }
-  .title_section .title span:after {
-    width: 15px;
-    height: 15px; }
   .brands .post_txt span {
     display: none; }
   .brands {
@@ -1027,22 +607,18 @@ a.btn {
     width: 100%; } }
 
 @media screen and (max-width: 576px) {
+  .brands .container:after {
+    display: none; }
   .sub_title .txt_block .bottom {
     font-size: 1.6em; }
   .sub_title .txt_block .top {
     font-size: 1.4em; }
-  .competition_crystal p {
-    font-size: 1.2em; }
   .price .center_price_block .price_block_container:before,
   .price .center_price_block:before {
     display: none; }
-  .crystal_labs .labs_container {
-    margin-top: 10px; }
   .price .center_price_block .price_block_container {
     padding: 0%; }
   .brands {
-    padding-bottom: 0; }
-  .crystal_labs {
     padding-bottom: 0; }
   .brands .slider_container:after,
   .brands .slider_container:before {
@@ -1051,14 +627,6 @@ a.btn {
     top: 27%; }
   .more_crystal {
     margin: 20px 0; }
-  .letter_item:before {
-    height: 50px;
-    width: 35px; }
-  .letter_item {
-    margin: 20px 0; }
-  .title_section .title span:after {
-    width: 10px;
-    height: 10px; }
   .top_banner .slide .img_block:before {
     padding-top: 100%; }
   .top_banner .slide img {
@@ -1092,27 +660,7 @@ a.btn {
     height: 35%;
     width: 90%;
     top: auto;
-    bottom: 20%; }
-  .links_block {
-    padding-top: 65px; }
-  .links_block li {
-    width: 50px;
-    margin: 0 2px; }
-  .links_block a {
-    font-size: 1em; }
-  .links_block ul {
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    padding: 0 15px; }
-  .title_section .title {
-    font-size: 2em;
-    letter-spacing: 0.3em; }
-    .title_section .title:before, .title_section .title:after {
-      display: none; }
-  .title_desription p {
-    display: none; } }
+    bottom: 20%; } }
 
 @media screen and (max-width: 400px) {
   .sub_title {
