--- a/portfolio/Individual/app/scss/common.scss
+++ b/portfolio/Individual/app/scss/common.scss
@@ -252,45 +252,41 @@ header {
   height: 100%;
   top: 0;
   z-index: 1;
+  .bg_page {
+     display: none;
+     position: absolute;
+     width: 100%;
+     height: 100%;
+     background-size: cover !important;
+  }
   .start_bg {
     display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background: url(../img/start.bg) no-repeat center top;
-    background-size: cover;
+  }
+  .contacts_bg {
+    display: none;
+    background: url(../img/contacts_page.jpg) no-repeat center top;
+    position: relative;
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+    }
   }
   .stars_bg {
-  	display: none;
-    position: absolute;
-    width: 100%;
-    height: 100%;
     background: url(../img/stars_page.jpg) no-repeat center top;
-    background-size: cover;
   }
   .services_bg {
-  	display: none;
-  	position: absolute;
-    width: 100%;
-    height: 100%;
     background: url(../img/services_bg.jpg) no-repeat center top;
-    background-size: cover;
   }
   .barber_bg {
-  	display: none;
-  	position: absolute;
-    width: 100%;
-    height: 100%;
     background: url(../img/barber_page.jpg) no-repeat center top;
-    background-size: cover;
   }
   .cosmetics_bg {
-  	display: none;
-  	position: absolute;
-    width: 100%;
-    height: 100%;
     background: url(../img/cosmetics_page.jpg) no-repeat center bottom;
-    background-size: cover;
   }
 }
 
