--- a/portfolio/Individual/app/scss/services.scss
+++ b/portfolio/Individual/app/scss/services.scss
@@ -63,6 +63,14 @@
 	}
 }
 
+
+
+@media screen and (min-width: 1800px) {
+   .services-page .container {
+   	max-width: 1800px;
+   }
+}
+
 @media screen and (max-width: 1479px) {
   .services-page .page_title img {
   	width: 250px;
